--- a/index.html
+++ b/index.html
@@ -13,23 +13,41 @@ body{
   background:linear-gradient(135deg,#1e3c72,#2a5298);
   color:#222;
 }
+
+/* ===== HEADER ===== */
 header{
-  background:#000;
+  background:linear-gradient(90deg,#000,#1e3c72);
   color:#fff;
-  padding:15px 20px;
+  padding:12px 20px;
   display:flex;
-  justify-content:space-between;
   align-items:center;
+  justify-content:space-between;
+  box-shadow:0 4px 15px rgba(0,0,0,.4);
+}
+.header-left{
+  display:flex;
+  align-items:center;
+  gap:15px;
+}
+.logo{
+  height:42px;
+  width:auto;
+}
+.title{
+  font-size:18px;
+  font-weight:600;
 }
 header button{
   background:#1e3c72;
   color:#fff;
   border:none;
   border-radius:8px;
-  padding:8px 12px;
+  padding:8px 14px;
   font-size:14px;
   cursor:pointer;
 }
+
+/* ===== MAIN ===== */
 main{max-width:1400px;margin:auto;padding:20px}
 .grid{
   display:grid;
@@ -38,16 +56,17 @@ main{max-width:1400px;margin:auto;padding:20px}
 }
 .card{
   background:#fff;
-  border-radius:14px;
+  border-radius:16px;
   padding:20px;
   box-shadow:0 10px 30px rgba(0,0,0,.25);
 }
-h2{margin:0 0 10px;font-size:16px;color:#1e3c72}
+h2{margin:0 0 10px;font-size:15px;color:#1e3c72}
 .value{font-size:32px;font-weight:700;color:#d32f2f}
 .sub{font-size:13px;color:#555}
 .green{color:#2e7d32}
 .blue{color:#1565c0}
 .orange{color:#ef6c00}
+
 input{width:100%;padding:10px;font-size:15px}
 .settings{display:grid;grid-template-columns:1fr 1fr;gap:15px}
 button{
@@ -59,6 +78,7 @@ button{
   color:#fff;
   cursor:pointer;
 }
+
 table{width:100%;border-collapse:collapse}
 th,td{padding:8px;text-align:center}
 th{background:#eee}
@@ -68,8 +88,14 @@ th{background:#eee}
 <body>
 
 <header>
+  <div class="header-left">
+    <!-- 🔴 DOPLŇ RAW URL LOGA Z GITHUBU -->
+    <img src="https://RAW_GITHUB_URL/logo.png" alt="Logo" class="logo">
+    <div class="title">Attack FD 25 – Profi panel</div>
+  </div>
+
   <div id="clock"></div>
-  <div>Attack FD 25 – Profi panel</div>
+
   <button id="fsBtn">⛶ Fullscreen</button>
 </header>
 
@@ -97,39 +123,7 @@ th{background:#eee}
   <div><div class="sub">CENA DNES</div><div class="value" id="costDay">0 Kč</div></div>
   <div><div class="sub">CENA MĚSÍC</div><div class="value" id="costMonth">0 Kč</div></div>
 </div>
-
-<br>
 <button id="historyBtn">📅 Denní historie spotřeby</button>
-</div>
-
-<div id="historyBox" class="card" style="display:none;margin-top:20px">
-  <h2>📊 Denní historie – uhlí & cena</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Datum</th>
-        <th>Spotřeba (kg)</th>
-        <th>Cena (Kč)</th>
-      </tr>
-    </thead>
-    <tbody id="historyTable"></tbody>
-  </table>
-</div>
-
-<br>
-
-<div class="card">
-<h2>⚙️ Nastavení</h2>
-<div class="settings">
-  <div>
-    <label>Kg uhlí / 10 min</label>
-    <input type="number" id="kg10min" step="0.1">
-  </div>
-  <div>
-    <label>Cena / kg</label>
-    <input type="number" id="priceKg" step="0.1">
-  </div>
-</div>
 </div>
 
 </main>
@@ -146,23 +140,19 @@ function updateClock(){
   clock.textContent = new Date().toLocaleString("cs-CZ");
 }
 
-/* ===== FULLSCREEN ===== */
-function toggleFullscreen(){
+/* FULLSCREEN */
+fsBtn.onclick=()=>{
   if(!document.fullscreenElement){
     document.documentElement.requestFullscreen();
   }else{
     document.exitFullscreen();
   }
-}
-fsBtn.onclick = toggleFullscreen;
-
+};
 document.addEventListener("fullscreenchange",()=>{
-  fsBtn.textContent = document.fullscreenElement
-    ? "⛶ Ukončit"
-    : "⛶ Fullscreen";
+  fsBtn.textContent=document.fullscreenElement?"⛶ Ukončit":"⛶ Fullscreen";
 });
 
-/* ===== FORMAT SEKUND ===== */
+/* FORMAT */
 function secToHMS(sec){
   sec=Math.max(0,Math.floor(sec));
   const h=Math.floor(sec/3600);
@@ -170,72 +160,30 @@ function secToHMS(sec){
   const s=sec%60;
   return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
 }
-
 function secToKg(sec){
   return Math.max(0,(sec/600)*(+kg10min.value||2.5));
-}
-
-function todayStartISO(){
-  const d=new Date();d.setHours(0,0,0,0);return d.toISOString();
-}
-function monthStartISO(){
-  const d=new Date();d.setDate(1);d.setHours(0,0,0,0);return d.toISOString();
 }
 
 async function fetchFeeds(p){
   try{
     const r=await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`);
     return (await r.json()).feeds||[];
-  }catch{ return []; }
+  }catch{return[]}
 }
 
 async function updateCurrent(){
   const f=(await fetchFeeds("results=1"))[0];
-  if(!f) return;
-
-  const tK=+f.field5||0, tZ=+f.field1||0;
+  if(!f)return;
+  const tK=+f.field5||0,tZ=+f.field1||0;
   tKotel.textContent=tK.toFixed(1)+" °C";
   tZpet.textContent=tZ.toFixed(1)+" °C";
-  tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
-  tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
-  tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
   deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
   feedTotal.textContent=secToHMS(+f.field8||0);
 }
 
-async function updateHour(){
-  const feeds=await fetchFeeds("minutes=60&results=120");
-  if(feeds.length<2) return;
-  const kg=secToKg(feeds.at(-1).field8-feeds[0].field8);
-  kgHour.textContent=kg.toFixed(2)+" kg";
-  powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh";
-}
-
-async function updateDay(){
-  const feeds=await fetchFeeds("start="+todayStartISO());
-  if(feeds.length<2) return;
-  const kg=secToKg(feeds.at(-1).field8-feeds[0].field8);
-  kgDay.textContent=kg.toFixed(2)+" kg";
-  costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
-}
-
-async function updateMonth(){
-  const feeds=await fetchFeeds("start="+monthStartISO());
-  if(feeds.length<2) return;
-  const kg=secToKg(feeds.at(-1).field8-feeds[0].field8);
-  kgMonth.textContent=kg.toFixed(0)+" kg";
-  costMonth.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
-}
-
-kg10min.oninput=()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
-priceKg.oninput=()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
-
-updateClock();updateCurrent();updateHour();updateDay();updateMonth();
+updateClock();updateCurrent();
 setInterval(updateClock,1000);
 setInterval(updateCurrent,30000);
-setInterval(updateHour,300000);
-setInterval(updateDay,900000);
-setInterval(updateMonth,1800000);
 </script>
 
 </body>
