--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ th{background:#eee}
 <header>
   <div class="header-left">
     <!-- 🔴 DOPLŇ RAW URL LOGA Z GITHUBU -->
-    <img src="https://RAW_GITHUB_URL/logo.png" alt="Logo" class="logo">
+    <img src="https://github.com/Lukianoo/fd25-dashboard/blob/main/logo-elektroservis.png">
     <div class="title">Attack FD 25 – Profi panel</div>
   </div>
 
