--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html> 
 <html lang="cs">
 <head>
 <meta charset="utf-8">
@@ -20,6 +20,10 @@ header{
   display:flex;
   justify-content:space-between;
   align-items:center;
+  gap:15px;
+}
+header img{
+  height:42px;
 }
 header button{
   background:#1e3c72;
@@ -68,6 +72,7 @@ th{background:#eee}
 <body>
 
 <header>
+  <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png" alt="Elektroservis">
   <div id="clock"></div>
   <div>Attack FD 25 – Profi panel</div>
   <button id="fsBtn">⛶ Fullscreen</button>
