--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> 
+<!doctype html>
 <html lang="cs">
 <head>
 <meta charset="utf-8">
@@ -19,20 +19,6 @@ header{
   padding:15px 20px;
   display:flex;
   justify-content:space-between;
-  align-items:center;
-  gap:15px;
-}
-header img{
-  height:42px;
-}
-header button{
-  background:#1e3c72;
-  color:#fff;
-  border:none;
-  border-radius:8px;
-  padding:8px 12px;
-  font-size:14px;
-  cursor:pointer;
 }
 main{max-width:1400px;margin:auto;padding:20px}
 .grid{
@@ -72,10 +58,8 @@ th{background:#eee}
 <body>
 
 <header>
-  <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png" alt="Elektroservis">
   <div id="clock"></div>
   <div>Attack FD 25 – Profi panel</div>
-  <button id="fsBtn">⛶ Fullscreen</button>
 </header>
 
 <main>
@@ -141,7 +125,7 @@ th{background:#eee}
 
 <script>
 const CHANNEL = 231269;
-const ENERGY = 4.8;
+const ENERGY = 4.8; // kWh / kg
 const EFF = 0.75;
 
 kg10min.value = localStorage.kg10min || 2.5;
@@ -151,28 +135,12 @@ function updateClock(){
   clock.textContent = new Date().toLocaleString("cs-CZ");
 }
 
-/* ===== FULLSCREEN ===== */
-function toggleFullscreen(){
-  if(!document.fullscreenElement){
-    document.documentElement.requestFullscreen();
-  }else{
-    document.exitFullscreen();
-  }
-}
-fsBtn.onclick = toggleFullscreen;
-
-document.addEventListener("fullscreenchange",()=>{
-  fsBtn.textContent = document.fullscreenElement
-    ? "⛶ Ukončit"
-    : "⛶ Fullscreen";
-});
-
-/* ===== FORMAT SEKUND ===== */
+/* ===== FORMAT SEKUND NA HH:MM:SS ===== */
 function secToHMS(sec){
-  sec=Math.max(0,Math.floor(sec));
-  const h=Math.floor(sec/3600);
-  const m=Math.floor((sec%3600)/60);
-  const s=sec%60;
+  sec = Math.max(0, Math.floor(sec));
+  const h = Math.floor(sec / 3600);
+  const m = Math.floor((sec % 3600) / 60);
+  const s = sec % 60;
   return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
 }
 
@@ -181,61 +149,134 @@ function secToKg(sec){
 }
 
 function todayStartISO(){
-  const d=new Date();d.setHours(0,0,0,0);return d.toISOString();
+  const d=new Date();
+  d.setHours(0,0,0,0);
+  return d.toISOString();
 }
+
 function monthStartISO(){
-  const d=new Date();d.setDate(1);d.setHours(0,0,0,0);return d.toISOString();
+  const d=new Date();
+  d.setDate(1);
+  d.setHours(0,0,0,0);
+  return d.toISOString();
 }
 
 async function fetchFeeds(p){
   try{
-    const r=await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`);
-    return (await r.json()).feeds||[];
-  }catch{ return []; }
+    const r=await fetch(
+      `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`
+    );
+    return (await r.json()).feeds || [];
+  }catch(e){
+    return [];
+  }
 }
 
 async function updateCurrent(){
-  const f=(await fetchFeeds("results=1"))[0];
-  if(!f) return;
+  const cur=await fetchFeeds("results=1");
+  if(!cur.length) return;
+  const f=cur[0];
 
-  const tK=+f.field5||0, tZ=+f.field1||0;
+  const tK=+f.field5||0;
+  const tZ=+f.field1||0;
+
   tKotel.textContent=tK.toFixed(1)+" °C";
   tZpet.textContent=tZ.toFixed(1)+" °C";
   tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
   tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
   tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
+
   deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
-  feedTotal.textContent=secToHMS(+f.field8||0);
+
+  const totalSec = +f.field8 || 0;
+  feedTotal.textContent = secToHMS(totalSec);
 }
 
 async function updateHour(){
   const feeds=await fetchFeeds("minutes=60&results=120");
   if(feeds.length<2) return;
-  const kg=secToKg(feeds.at(-1).field8-feeds[0].field8);
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
   kgHour.textContent=kg.toFixed(2)+" kg";
   powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh";
 }
 
 async function updateDay(){
-  const feeds=await fetchFeeds("start="+todayStartISO());
+  const feeds=await fetchFeeds("start="+todayStartISO()+"&results=2000");
   if(feeds.length<2) return;
-  const kg=secToKg(feeds.at(-1).field8-feeds[0].field8);
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
   kgDay.textContent=kg.toFixed(2)+" kg";
   costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
 async function updateMonth(){
-  const feeds=await fetchFeeds("start="+monthStartISO());
+  const feeds=await fetchFeeds("start="+monthStartISO()+"&results=3000");
   if(feeds.length<2) return;
-  const kg=secToKg(feeds.at(-1).field8-feeds[0].field8);
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
   kgMonth.textContent=kg.toFixed(0)+" kg";
   costMonth.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
-kg10min.oninput=()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
-priceKg.oninput=()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
+historyBtn.onclick = async () => {
+  historyBox.style.display =
+    historyBox.style.display === "none" ? "block" : "none";
 
-updateClock();updateCurrent();updateHour();updateDay();updateMonth();
+  historyTable.innerHTML="";
+  const days=14;
+  const price=+priceKg.value||6.2;
+
+  for(let i=0;i<days;i++){
+    const d1=new Date();
+    d1.setDate(d1.getDate()-i);
+    d1.setHours(0,0,0,0);
+    const d2=new Date(d1);
+    d2.setDate(d2.getDate()+1);
+
+    const feeds=await fetchFeeds(
+      `start=${d1.toISOString()}&end=${d2.toISOString()}&results=2000`
+    );
+
+    if(feeds.length>1){
+      const kg=secToKg(
+        feeds.at(-1).field8 - feeds[0].field8
+      );
+
+      historyTable.innerHTML+=`
+        <tr>
+          <td>${d1.toLocaleDateString("cs-CZ")}</td>
+          <td>${kg.toFixed(2)}</td>
+          <td>${(kg*price).toFixed(0)}</td>
+        </tr>`;
+    }
+  }
+};
+
+kg10min.oninput=()=>{
+  localStorage.kg10min=kg10min.value;
+  updateHour();updateDay();updateMonth();
+};
+priceKg.oninput=()=>{
+  localStorage.priceKg=priceKg.value;
+  updateDay();updateMonth();
+};
+
+updateClock();
+updateCurrent();
+updateHour();
+updateDay();
+updateMonth();
+
 setInterval(updateClock,1000);
 setInterval(updateCurrent,30000);
 setInterval(updateHour,300000);
