--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ th{background:#eee}
 
 <header>
   <div id="clock"></div>
-  <div>Attack FD 25 – Profi panel</div>
+  <div>Attack FD 25 – panel kotelny</div>
 </header>
 
 <main>
