--- a/index.html
+++ b/index.html
@@ -148,10 +148,13 @@ function secToKg(sec){
 }
 
 function todayStartISO(){
-  const d=new Date();
-  d.setHours(0,0,0,0);
-  return d.toISOString();
+  const d = new Date();
+  const yyyy = d.getFullYear();
+  const mm = String(d.getMonth()+1).padStart(2,"0");
+  const dd = String(d.getDate()).padStart(2,"0");
+  return `${yyyy}-${mm}-${dd}T00:00:00`;
 }
+
 
 async function fetchFeeds(p){
   try{
