--- a/index.html
+++ b/index.html
@@ -147,18 +147,17 @@ function secToKg(sec){
   return Math.max(0,(sec/600)*(+kg10min.value||2.5));
 }
 
+/* ===== SPRÁVNÝ START DNE PRO THINGSPEAK ===== */
 function todayStartISO(){
   const d = new Date();
-  const yyyy = d.getFullYear();
-  const mm = String(d.getMonth()+1).padStart(2,"0");
-  const dd = String(d.getDate()).padStart(2,"0");
-  return `${yyyy}-${mm}-${dd}T00:00:00`;
+  d.setHours(0,0,0,0);
+  const utc = new Date(d.getTime() - d.getTimezoneOffset()*60000);
+  return utc.toISOString();
 }
-
 
 async function fetchFeeds(p){
   try{
-    const r=await fetch(
+    const r = await fetch(
       `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`
     );
     return (await r.json()).feeds || [];
@@ -168,83 +167,88 @@ async function fetchFeeds(p){
 }
 
 async function updateCurrent(){
-  const cur=await fetchFeeds("results=1");
+  const cur = await fetchFeeds("results=1");
   if(!cur.length) return;
-  const f=cur[0];
+  const f = cur[0];
 
-  const tK=+f.field5||0;
-  const tZ=+f.field1||0;
+  const tK = +f.field5||0;
+  const tZ = +f.field1||0;
 
-  tKotel.textContent=tK.toFixed(1)+" °C";
-  tZpet.textContent=tZ.toFixed(1)+" °C";
-  tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
-  tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
-  tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
+  tKotel.textContent = tK.toFixed(1)+" °C";
+  tZpet.textContent = tZ.toFixed(1)+" °C";
+  tPodavac.textContent = (+f.field2||0).toFixed(1)+" °C";
+  tBojler.textContent = (+f.field3||0).toFixed(1)+" °C";
+  tVenku.textContent = (+f.field4||0).toFixed(1)+" °C";
 
-  deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
-
-  feedTotal.textContent=secToHMS(+f.field8||0);
+  deltaT.textContent = (tK-tZ).toFixed(1)+" °C";
+  feedTotal.textContent = secToHMS(+f.field8||0);
 }
 
 async function updateHour(){
-  const feeds=await fetchFeeds("minutes=60");
-  if(feeds.length<2) return;
+  const feeds = await fetchFeeds("minutes=60");
+  if(feeds.length < 2) return;
 
-  const kg=secToKg(
+  feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
+
+  const kg = secToKg(
     (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
   );
 
-  kgHour.textContent=kg.toFixed(2)+" kg";
-  powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh";
+  kgHour.textContent = kg.toFixed(2)+" kg";
+  powerKWbig.textContent = (kg*ENERGY*EFF).toFixed(1)+" kWh";
 }
 
 async function updateDay(){
-  const feeds=await fetchFeeds("start="+todayStartISO());
-  if(feeds.length<2) return;
+  const feeds = await fetchFeeds("start="+todayStartISO());
+  if(feeds.length < 2) return;
 
-  const kg=secToKg(
+  feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
+
+  const kg = secToKg(
     (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
   );
 
-  kgDay.textContent=kg.toFixed(2)+" kg";
-  costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
+  kgDay.textContent = kg.toFixed(2)+" kg";
+  costDay.textContent =
+    (kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
 async function updateMonth(){
-  let totalKg=0;
-  const price=+priceKg.value||6.2;
-  const now=new Date();
-  const days=now.getDate();
+  let totalKg = 0;
+  const price = +priceKg.value||6.2;
+  const now = new Date();
+  const days = now.getDate();
 
   for(let i=0;i<days;i++){
-    const d1=new Date();
+    const d1 = new Date();
     d1.setDate(d1.getDate()-i);
     d1.setHours(0,0,0,0);
 
-    const d2=new Date(d1);
+    const d2 = new Date(d1);
     d2.setDate(d2.getDate()+1);
 
-    const feeds=await fetchFeeds(
+    const feeds = await fetchFeeds(
       `start=${d1.toISOString()}&end=${d2.toISOString()}`
     );
 
     if(feeds.length>1){
-      totalKg+=secToKg(
+      feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
+      totalKg += secToKg(
         (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
       );
     }
   }
 
-  kgMonth.textContent=totalKg.toFixed(1)+" kg";
-  costMonth.textContent=(totalKg*price).toFixed(0)+" Kč";
+  kgMonth.textContent = totalKg.toFixed(1)+" kg";
+  costMonth.textContent = (totalKg*price).toFixed(0)+" Kč";
 }
 
-historyBtn.onclick=async()=>{
-  historyBox.style.display=
+historyBtn.onclick = async ()=>{
+  historyBox.style.display =
     historyBox.style.display==="none"?"block":"none";
 
   historyTable.innerHTML="";
-  const price=+priceKg.value||6.2;
+  const price = +priceKg.value||6.2;
 
   for(let i=0;i<14;i++){
     const d1=new Date();
@@ -258,6 +262,7 @@ historyBtn.onclick=async()=>{
     );
 
     if(feeds.length>1){
+      feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
       const kg=secToKg(
         (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
       );
