--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ th{background:#eee}
   <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
   <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
   <div class="card"><h2>🌡️ ΔT</h2><div class="value orange" id="deltaT">--</div></div>
-  <div class="card"><h2>⚡ Energie (1 h)</h2><div class="value green" id="powerKWbig">--</div></div>
+  <div class="card"><h2>⚡ Energie (1 h)</h2><div class="value green" id="energyHour">--</div></div>
   <div class="card"><h2>⚙️ Podavač</h2><div class="value" id="tPodavac">--</div></div>
   <div class="card"><h2>💧 Bojler</h2><div class="value" id="tBojler">--</div></div>
   <div class="card"><h2>🌡️ Venku</h2><div class="value" id="tVenku">--</div></div>
@@ -128,6 +128,10 @@ const CHANNEL = 231269;
 const ENERGY = 4.8;
 const EFF = 0.75;
 
+const clock = document.getElementById("clock");
+const kg10min = document.getElementById("kg10min");
+const priceKg = document.getElementById("priceKg");
+
 kg10min.value = localStorage.kg10min || 2.5;
 priceKg.value = localStorage.priceKg || 6.2;
 
@@ -147,7 +151,6 @@ function secToKg(sec){
   return Math.max(0,(sec/600)*(+kg10min.value||2.5));
 }
 
-/* ===== SPRÁVNÝ START DNE PRO THINGSPEAK ===== */
 function todayStartISO(){
   const d = new Date();
   d.setHours(0,0,0,0);
@@ -160,16 +163,16 @@ async function fetchFeeds(p){
     const r = await fetch(
       `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`
     );
+    if(!r.ok) throw "";
     return (await r.json()).feeds || [];
-  }catch(e){
+  }catch{
     return [];
   }
 }
 
 async function updateCurrent(){
-  const cur = await fetchFeeds("results=1");
-  if(!cur.length) return;
-  const f = cur[0];
+  const f = (await fetchFeeds("results=1"))[0];
+  if(!f) return;
 
   const tK = +f.field5||0;
   const tZ = +f.field1||0;
@@ -179,30 +182,25 @@ async function updateCurrent(){
   tPodavac.textContent = (+f.field2||0).toFixed(1)+" °C";
   tBojler.textContent = (+f.field3||0).toFixed(1)+" °C";
   tVenku.textContent = (+f.field4||0).toFixed(1)+" °C";
-
   deltaT.textContent = (tK-tZ).toFixed(1)+" °C";
   feedTotal.textContent = secToHMS(+f.field8||0);
 }
 
 async function updateHour(){
-  const feeds = await fetchFeeds("minutes=60");
-  if(feeds.length < 2) return;
-
-  feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
-
+  const feeds = await fetchFeeds("minutes=60&results=8000");
+  if(feeds.length<2) return;
   const kg = secToKg(
     (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
   );
-
   kgHour.textContent = kg.toFixed(2)+" kg";
-  powerKWbig.textContent = (kg*ENERGY*EFF).toFixed(1)+" kWh";
+  energyHour.textContent = (kg*ENERGY*EFF).toFixed(1)+" kWh";
 }
 
 async function updateDay(){
-  const feeds = await fetchFeeds("start="+todayStartISO());
-  if(feeds.length < 2) return;
-
-  feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
+  const feeds = await fetchFeeds(
+    "start="+todayStartISO()+"&results=8000"
+  );
+  if(feeds.length<2) return;
 
   const kg = secToKg(
     (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
@@ -217,22 +215,19 @@ async function updateMonth(){
   let totalKg = 0;
   const price = +priceKg.value||6.2;
   const now = new Date();
-  const days = now.getDate();
 
-  for(let i=0;i<days;i++){
+  for(let i=0;i<now.getDate();i++){
     const d1 = new Date();
     d1.setDate(d1.getDate()-i);
     d1.setHours(0,0,0,0);
-
     const d2 = new Date(d1);
     d2.setDate(d2.getDate()+1);
 
     const feeds = await fetchFeeds(
-      `start=${d1.toISOString()}&end=${d2.toISOString()}`
+      `start=${d1.toISOString()}&end=${d2.toISOString()}&results=8000`
     );
 
     if(feeds.length>1){
-      feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
       totalKg += secToKg(
         (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
       );
@@ -243,48 +238,8 @@ async function updateMonth(){
   costMonth.textContent = (totalKg*price).toFixed(0)+" Kč";
 }
 
-historyBtn.onclick = async ()=>{
-  historyBox.style.display =
-    historyBox.style.display==="none"?"block":"none";
-
-  historyTable.innerHTML="";
-  const price = +priceKg.value||6.2;
-
-  for(let i=0;i<14;i++){
-    const d1=new Date();
-    d1.setDate(d1.getDate()-i);
-    d1.setHours(0,0,0,0);
-    const d2=new Date(d1);
-    d2.setDate(d2.getDate()+1);
-
-    const feeds=await fetchFeeds(
-      `start=${d1.toISOString()}&end=${d2.toISOString()}`
-    );
-
-    if(feeds.length>1){
-      feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
-      const kg=secToKg(
-        (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
-      );
-
-      historyTable.innerHTML+=`
-        <tr>
-          <td>${d1.toLocaleDateString("cs-CZ")}</td>
-          <td>${kg.toFixed(2)}</td>
-          <td>${(kg*price).toFixed(0)}</td>
-        </tr>`;
-    }
-  }
-};
-
-kg10min.oninput=()=>{
-  localStorage.kg10min=kg10min.value;
-  updateHour();updateDay();updateMonth();
-};
-priceKg.oninput=()=>{
-  localStorage.priceKg=priceKg.value;
-  updateDay();updateMonth();
-};
+kg10min.oninput=()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
+priceKg.oninput=()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
 
 updateClock();
 updateCurrent();
